--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -964,7 +964,8 @@
         "# ChilloutMix\u00b7\u9ad8\u6e05\u5199\u5b9e\u771f\u4eba\u6a21\u578b\n",
         "check_model_and_make_symbollink('chilloutmix_NiPrunedFp16.safetensors','./models/Stable-diffusion',True) \n",
         "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
-        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',True)"
+        "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',True)\n",
+        "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',True)"
       ]
     },
     {
@@ -1219,6 +1220,63 @@
     },
     {
       "cell_type": "markdown",
+      "id": "0dc2cdf6-b66b-4c0f-8ebe-4300247d009e",
+      "metadata": {},
+      "source": [
+        "# \u5bf9SD-WebUI\u7684config.json\u8fdb\u884c\u53c2\u6570\u914d\u7f6e"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fda22c2f-fd93-41f3-a138-2c7287b9b0d7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import json\n",
+        "from shutil import copyfile\n",
+        "from func.env import getWebUIDir\n",
+        "from datetime import datetime\n",
+        "\n",
+        "def modify_config(modify_func, backup_folder=\"config_backups\"):\n",
+        "    global webUIDir\n",
+        "    try:\n",
+        "        webUIDir\n",
+        "    except:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "\n",
+        "    config_file_path = os.path.join(webUIDir, \"config.json\")\n",
+        "    backup_folder_path = os.path.join(webUIDir, backup_folder)\n",
+        "    if not os.path.exists(backup_folder_path):\n",
+        "        os.makedirs(backup_folder_path)\n",
+        "    backup_file_path = os.path.join(backup_folder_path, f\"config_backup_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\")\n",
+        "\n",
+        "    # \u5907\u4efd\u6587\u4ef6\n",
+        "    copyfile(config_file_path, backup_file_path)\n",
+        "\n",
+        "    with open(config_file_path, \"r\") as f:\n",
+        "        config = json.load(f)\n",
+        "\n",
+        "    config = modify_func(config)\n",
+        "\n",
+        "    with open(config_file_path, \"w\") as f:\n",
+        "        json.dump(config, f)\n",
+        "\n",
+        "    print(f\"\u6210\u529f\u4fee\u6539\u5e76\u5907\u4efd\u4e86 {config_file_path} \u6587\u4ef6\u81f3 {backup_file_path}\uff01\")\n",
+        "\n",
+        "# \u4f7f\u7528\u793a\u4f8b\uff0c\u4fee\u6539 quicksettings \u7684\u503c\n",
+        "def modify(config):\n",
+        "    config['quicksettings'] = \"sd_model_checkpoint, sd_vae, inpainting_mask_weight, CLIP_stop_at_last_layers\"\n",
+        "    config['extra_networks_default_view'] = \"thumbs\"\n",
+        "    config['extra_networks_default_multiplier'] = 0.6\n",
+        "    return config\n",
+        "\n",
+        "modify_config(modify, backup_folder=\"config_backups\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "6ba69146-2487-4537-8dd8-a14970088878",
       "metadata": {},
       "source": [
@@ -1273,7 +1331,7 @@
         "    # 'pip install \"opencv-python-headless<4.3\" ','&&',\n",
         "    'python launch.py',\n",
         "    '--share',\n",
-        "    '--opt-split-attention',\n",
+        "    '--opt-split-attention', #\u2013opt-split-attention\u662f\u4e00\u4e2a\u4f18\u5316\u9009\u9879\uff0c\u5b83\u53ef\u4ee5\u8ba9\u4f60\u5728\u6709\u9650\u7684\u663e\u5b58\u4e0b\u751f\u6210\u66f4\u5927\u7684\u56fe\u7247\u3002\u5b83\u7684\u539f\u7406\u662f\u5c06\u6ce8\u610f\u529b\u673a\u5236\u5206\u5272\u6210\u591a\u4e2a\u5934\u90e8\uff0c\u51cf\u5c11\u8ba1\u7b97\u91cf\u548c\u5185\u5b58\u6d88\u8017\u3002\u5982\u679c\u4f60\u4e0d\u5f00\u542f\u8fd9\u4e2a\u9009\u9879\uff0c\u4f60\u53ef\u80fd\u4f1a\u9047\u5230\u663e\u5b58\u4e0d\u8db3\u7684\u95ee\u9898\u3002\n",
         "    # '--port 7860',\n",
         "    '--deepdanbooru',\n",
         "    '--administrator',\n",
