add mount LoRA models

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -885,7 +885,7 @@
         "\n",
         "    # \u9a8c\u8bc1\u8f6f\u94fe\u63a5\u662f\u5426\u6210\u529f\u521b\u5efa\n",
         "    if os.path.islink(symlink_file):\n",
-        "        print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
+        "        # print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
         "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m \u279c \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
         "    else:\n",
         "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
@@ -924,7 +924,7 @@
         "\n",
         "    model_path = os.path.realpath(os.path.join(abs_models_dir, model_name))\n",
         "\n",
-        "    for i in range(0, 4):  # AutoDL\u4e2d\u8fdb\u884cnas\u3001fs\u3001pub\u7684\u641c\u7d22\n",
+        "    for i in range(0, 5):  # \u5728input\u4e2d\u8fdb\u884c\u641c\u7d22\n",
         "        file_list = find_file(f'/input{i}', model_name)\n",
         "        if file_list:\n",
         "            break\n",
@@ -955,9 +955,10 @@
         "                    print('\u590d\u5236\u5b8c\u6210\uff01')\n",
         "                else:\n",
         "                    print(f'{model_name}\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u590d\u5236')\n",
+        "        return os.path.dirname(target_model_dist)\n",
         "    else:\n",
         "        print(f'\u4e0d\u5b58\u5728{model_name}')\n",
-        "\n",
+        "        return None\n",
         "\n",
         "# SD 2.1\u6a21\u578b\n",
         "check_model_and_make_symbollink('v2-1_768-nonema-pruned.ckpt','./models/Stable-diffusion',True)\n",
@@ -966,6 +967,54 @@
         "# AOM3\u00b7\u4e8c\u6b21\u5143\u6a21\u578b\n",
         "check_model_and_make_symbollink('abyssorangemix3AOM3_aom3a3.safetensors','./models/Stable-diffusion',True)\n",
         "check_model_and_make_symbollink('orangemix.vae.pt','./models/VAE',True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9ecb312a-5acf-452b-afb9-17268532a5b2",
+      "metadata": {},
+      "source": [
+        "# \u6302\u8f7dLoRA\u6a21\u578b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5d35c609-4d86-4450-978b-7b3c2f805aa7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "def create_model_with_thumbnail(model_name, models_dir, use_symlink=True):\n",
+        "    #\u5148\u590d\u5236LoRA\u6a21\u578b\n",
+        "    input_dir = check_model_and_make_symbollink(model_name, models_dir, use_symlink)\n",
+        "    \n",
+        "    if input_dir:\n",
+        "        file_name, ext = os.path.splitext(model_name)\n",
+        "        thumbnail_name = file_name + '.png'\n",
+        "        thumbnail_path = os.path.join(input_dir, thumbnail_name)\n",
+        "\n",
+        "        thumbnail_exts = ['png', 'jpg', 'jpeg', 'bmp', 'gif']\n",
+        "        for ext in thumbnail_exts:\n",
+        "            thumbnail_name = file_name + '.' + ext\n",
+        "            thumbnail_path = os.path.join(input_dir, thumbnail_name)\n",
+        "            if os.path.exists(thumbnail_path):\n",
+        "                print(f'\u627e\u5230\u7f29\u7565\u56fe\uff1a{thumbnail_name}')\n",
+        "                # \u518d\u590d\u5236\u7f29\u7565\u56fe\n",
+        "                check_model_and_make_symbollink(thumbnail_name, models_dir, use_symlink)\n",
+        "                return\n",
+        "        print('\u672a\u627e\u5230\u7f29\u7565\u56fe')\n",
+        "\n",
+        "create_model_with_thumbnail('Akira Toriyama.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('Makima.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('animeScreencapStyle_v230epochs.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('kamehameha.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('lisaLoraCollectionOf_singleLoraLisa.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('princess zelda.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('pyraMythraPneuma_50Epochs.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('wlop.safetensors','./models/Lora',True)\n",
+        "create_model_with_thumbnail('yakumo_yukari.pt','./models/Lora',True)"
       ]
     },
     {
@@ -1038,7 +1087,10 @@
       "outputs": [],
       "source": [
         "check_model_and_make_symbollink('SwinIR_4x.pth','./models/SwinIR',True)\n",
-        "check_model_and_make_symbollink('RealESRGAN_x4plus.pth','./models/RealESRGAN',True)"
+        "check_model_and_make_symbollink('RealESRGAN_x4plus.pth','./models/RealESRGAN',True)\n",
+        "check_model_and_make_symbollink('BSRGAN.pth','./models/ESRGAN',True)\n",
+        "check_model_and_make_symbollink('4x_foolhardy_Remacri.pth','./models/ESRGAN',True)\n",
+        "check_model_and_make_symbollink('ESRGAN_4x.pth','./models/ESRGAN',True)"
       ]
     },
     {
@@ -1336,6 +1388,8 @@
         "    '--deepdanbooru',\n",
         "    '--administrator',\n",
         "    '--disable-safe-unpickle',\n",
+        "    '--no-half-vae',\n",
+        "    '--disable-nan-check'\n",
         "    # '--no-half'\n",
         "       ]\n",
         "\n",
