fix bug change images-browser extension

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -759,7 +759,7 @@
       "source": [
         "from func.extensionsInstaller import install\n",
         "\n",
-        "extURL='https://github.com/yfszzx/stable-diffusion-webui-images-browser'\n",
+        "extURL='https://github.com/AlUlkesh/stable-diffusion-webui-images-browser'\n",
         "extFileSize=82945\n",
         "\n",
         "install(extURL,extFileSize)"
@@ -1045,7 +1045,7 @@
         "check_model_and_make_symbollink('ViT-L-14.pt','/root/.cache/clip',True)\n",
         "check_model_and_make_symbollink('ViT-B-16.pt','/root/.cache/clip',True)\n",
         "# Deepbooru\u6a21\u578b\n",
-        "check_model_and_make_symbollink('model-resnet_custom_v3.pt','/models/torch_deepdanbooru',True)"
+        "check_model_and_make_symbollink('model-resnet_custom_v3.pt','./models/torch_deepdanbooru',True)"
       ]
     },
     {
@@ -1299,23 +1299,29 @@
         "        webUIDir = getWebUIDir()\n",
         "\n",
         "    config_file_path = os.path.join(webUIDir, \"config.json\")\n",
-        "    backup_folder_path = os.path.join(webUIDir, backup_folder)\n",
-        "    if not os.path.exists(backup_folder_path):\n",
-        "        os.makedirs(backup_folder_path)\n",
-        "    backup_file_path = os.path.join(backup_folder_path, f\"config_backup_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\")\n",
+        "    if os.path.exists(config_file_path):\n",
+        "        # \u5982\u679c\u6587\u4ef6\u5b58\u5728\uff0c\u5c31\u6267\u884c\u540e\u7eed\u7684\u64cd\u4f5c\n",
+        "        backup_folder_path = os.path.join(webUIDir, backup_folder)\n",
+        "        if not os.path.exists(backup_folder_path):\n",
+        "            os.makedirs(backup_folder_path)\n",
+        "        backup_file_path = os.path.join(backup_folder_path, f\"config_backup_{datetime.now().strftime('%Y%m%d_%H%M%S')}.json\")\n",
         "\n",
-        "    # \u5907\u4efd\u6587\u4ef6\n",
-        "    copyfile(config_file_path, backup_file_path)\n",
+        "        # \u5907\u4efd\u6587\u4ef6\n",
+        "        copyfile(config_file_path, backup_file_path)\n",
         "\n",
-        "    with open(config_file_path, \"r\") as f:\n",
-        "        config = json.load(f)\n",
+        "        with open(config_file_path, \"r\") as f:\n",
+        "            config = json.load(f)\n",
         "\n",
-        "    config = modify_func(config)\n",
+        "        config = modify_func(config)\n",
         "\n",
-        "    with open(config_file_path, \"w\") as f:\n",
-        "        json.dump(config, f)\n",
+        "        with open(config_file_path, \"w\") as f:\n",
+        "            json.dump(config, f)\n",
         "\n",
-        "    print(f\"\u6210\u529f\u4fee\u6539\u5e76\u5907\u4efd\u4e86 {config_file_path} \u6587\u4ef6\u81f3 {backup_file_path}\uff01\")\n",
+        "        print(f\"\u6210\u529f\u4fee\u6539\u5e76\u5907\u4efd\u4e86 {config_file_path} \u6587\u4ef6\u81f3 {backup_file_path}\uff01\")\n",
+        "\n",
+        "    else:\n",
+        "        # \u5982\u679c\u6587\u4ef6\u4e0d\u5b58\u5728\uff0c\u5c31\u4e0d\u8fdb\u884c\u4fee\u6539\n",
+        "        print(\"config.json\u6587\u4ef6\u4e0d\u5b58\u5728\uff0c\u65e0\u6cd5\u4fee\u6539\uff01\")\n",
         "\n",
         "# \u4f7f\u7528\u793a\u4f8b\uff0c\u4fee\u6539 quicksettings \u7684\u503c\n",
         "def modify(config):\n",
