enhanced:use py3.10.6

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -259,7 +259,7 @@
         "\n",
         "custom_env_name = 'py' + python_version\n",
         "\n",
-        "custom_env_name = 'base'\n",
+        "# custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
@@ -351,8 +351,61 @@
         "base_args = [\n",
         "    'source activate','&&',\n",
         "    f'conda activate {custom_env_dir}','&&',\n",
-        "    # proxy,'&&'\n",
+        "    proxy,'&&'\n",
         "       ]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d9eb5f41-4e14-4789-bf98-82fd8d7df6d5",
+      "metadata": {},
+      "source": [
+        "### \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5triton"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fb16b332-9f7e-47ba-ad31-58787c9db902",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "# triton_repo_dir = os.path.join(root_dir,'triton')\n",
+        "\n",
+        "# if not os.path.exists(triton_repo_dir):\n",
+        "#     !cd $root_dir &&\\\n",
+        "#     git clone https://github.com/openai/triton.git\n",
+        "\n",
+        "# !cd $root_dir &&\\\n",
+        "# cd triton/python &&\\\n",
+        "# pip install cmake &&\\\n",
+        "# pip -v install -e ."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "826f655a-689c-4930-bb58-bdad78e89435",
+      "metadata": {},
+      "source": [
+        "### \u901a\u8fc7PIP\u5b89\u88c5triton\u7684\u6700\u65b0nightly release"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8304cca8-d28f-4dcf-904b-c8a715e8d973",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "triton_install_args = base_args[:]\n",
+        "triton_install_args += [\n",
+        "    'python -m pip install -U --pre triton'\n",
+        "]\n",
+        "triton_install_cmd = (\" \").join(triton_install_args)\n",
+        "print(triton_install_cmd)\n",
+        "output = !$triton_install_cmd"
       ]
     },
     {
@@ -433,7 +486,20 @@
         "\n",
         "\n",
         "def get_xformers_info():\n",
-        "    output = !python -m xformers.info\n",
+        "    get_xformers_info_args = base_args[:]\n",
+        "    get_xformers_info_args += [\n",
+        "        f'cd {webUIDir}','&&',\n",
+        "        'git pull','&&',\n",
+        "        # 'git checkout d8f8bcb','&&'\n",
+        "        'python -V',\n",
+        "        '&&',\n",
+        "        # 'conda config --append channels conda-forge','&&',\n",
+        "        # 'conda install --yes --file requirements.txt','&&',\n",
+        "        'python -m xformers.info'\n",
+        "    ]\n",
+        "    get_xformers_info_cmd = (\" \").join(get_xformers_info_args)\n",
+        "    print(get_xformers_info_cmd)\n",
+        "    output = !$get_xformers_info_cmd\n",
         "    output = '\\n'.join(output)\n",
         "    info = {}\n",
         "    for line in output.strip().split('\\n'):\n",
@@ -444,7 +510,7 @@
         "\n",
         "def check_xformers_info(validate_rules):\n",
         "    info = get_xformers_info()\n",
-        "    # print(info)\n",
+        "    print(info)\n",
         "    for key, value in validate_rules.items():\n",
         "        if info.get(key) != value:\n",
         "            if isinstance(value, bool):\n",
@@ -480,7 +546,13 @@
         "    print('Xformers\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u53e6\u5916\u5b89\u88c5\u6216\u7f16\u8bd1')\n",
         "else:\n",
         "    # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
-        "    whl_path = find_xformers_whl_and_install('/')"
+        "    for i in range(0, 5):  # \u5728input\u4e2d\u8fdb\u884c\u641c\u7d22\n",
+        "        whl_path = find_xformers_whl_and_install(f'/input{i}')\n",
+        "        if whl_path:\n",
+        "            break\n",
+        "        else:\n",
+        "            continue\n",
+        "    "
       ]
     },
     {
@@ -521,53 +593,6 @@
         "\n",
         "#     # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
         "#     find_xformers_whl_and_install('/')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "d9eb5f41-4e14-4789-bf98-82fd8d7df6d5",
-      "metadata": {},
-      "source": [
-        "### \u4ece\u6e90\u4ee3\u7801\u7684\u65b9\u5f0f\u5b89\u88c5triton"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "fb16b332-9f7e-47ba-ad31-58787c9db902",
-      "metadata": {
-        "scrolled": true
-      },
-      "outputs": [],
-      "source": [
-        "# triton_repo_dir = os.path.join(root_dir,'triton')\n",
-        "\n",
-        "# if not os.path.exists(triton_repo_dir):\n",
-        "#     !cd $root_dir &&\\\n",
-        "#     git clone https://github.com/openai/triton.git\n",
-        "\n",
-        "# !cd $root_dir &&\\\n",
-        "# cd triton/python &&\\\n",
-        "# pip install cmake &&\\\n",
-        "# pip -v install -e ."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "826f655a-689c-4930-bb58-bdad78e89435",
-      "metadata": {},
-      "source": [
-        "### \u901a\u8fc7PIP\u5b89\u88c5triton\u7684\u6700\u65b0nightly release"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8304cca8-d28f-4dcf-904b-c8a715e8d973",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!pip install -U --pre triton"
       ]
     },
     {
@@ -1272,6 +1297,244 @@
     },
     {
       "cell_type": "markdown",
+      "id": "21a173b5-8ee8-4c2f-9114-718c9022789b",
+      "metadata": {},
+      "source": [
+        "# \u751f\u6210Config.json"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "46ccaa61-cd93-446d-9693-da64c2ed9ea4",
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true
+      },
+      "source": [
+        "## \u5b9a\u4e49\u8981\u5199\u5165\u7684JSON\u5bf9\u8c61\uff08\u592a\u957f\u4e86\uff0c\u5efa\u8bae\u6298\u53e0\uff09"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1eafbb11-fd60-432d-8786-a3bbca690bdd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u5b9a\u4e49\u8981\u5199\u5165\u7684JSON\u5bf9\u8c61\n",
+        "config = {\n",
+        "    \"samples_save\": True,\n",
+        "    \"samples_format\": \"png\",\n",
+        "    \"samples_filename_pattern\": \"\",\n",
+        "    \"save_images_add_number\": True,\n",
+        "    \"grid_save\": True,\n",
+        "    \"grid_format\": \"png\",\n",
+        "    \"grid_extended_filename\": False,\n",
+        "    \"grid_only_if_multiple\": True,\n",
+        "    \"grid_prevent_empty_spots\": False,\n",
+        "    \"n_rows\": -1,\n",
+        "    \"enable_pnginfo\": True,\n",
+        "    \"save_txt\": False,\n",
+        "    \"save_images_before_face_restoration\": False,\n",
+        "    \"save_images_before_highres_fix\": False,\n",
+        "    \"save_images_before_color_correction\": False,\n",
+        "    \"jpeg_quality\": 80,\n",
+        "    \"export_for_4chan\": True,\n",
+        "    \"img_downscale_threshold\": 4.0,\n",
+        "    \"target_side_length\": 4000,\n",
+        "    \"use_original_name_batch\": True,\n",
+        "    \"use_upscaler_name_as_suffix\": False,\n",
+        "    \"save_selected_only\": True,\n",
+        "    \"do_not_add_watermark\": False,\n",
+        "    \"temp_dir\": \"\",\n",
+        "    \"clean_temp_dir_at_start\": False,\n",
+        "    \"outdir_samples\": \"\",\n",
+        "    \"outdir_txt2img_samples\": \"outputs/txt2img-images\",\n",
+        "    \"outdir_img2img_samples\": \"outputs/img2img-images\",\n",
+        "    \"outdir_extras_samples\": \"outputs/extras-images\",\n",
+        "    \"outdir_grids\": \"\",\n",
+        "    \"outdir_txt2img_grids\": \"outputs/txt2img-grids\",\n",
+        "    \"outdir_img2img_grids\": \"outputs/img2img-grids\",\n",
+        "    \"outdir_save\": \"log/images\",\n",
+        "    \"save_to_dirs\": True,\n",
+        "    \"grid_save_to_dirs\": True,\n",
+        "    \"use_save_to_dirs_for_ui\": False,\n",
+        "    \"directories_filename_pattern\": \"[date]\",\n",
+        "    \"directories_max_prompt_words\": 8,\n",
+        "    \"ESRGAN_tile\": 192,\n",
+        "    \"ESRGAN_tile_overlap\": 8,\n",
+        "    \"realesrgan_enabled_models\": [\n",
+        "        \"R-ESRGAN 4x+\",\n",
+        "        \"R-ESRGAN 4x+ Anime6B\"\n",
+        "    ],\n",
+        "    \"upscaler_for_img2img\": None,\n",
+        "    \"face_restoration_model\": \"CodeFormer\",\n",
+        "    \"code_former_weight\": 0.5,\n",
+        "    \"face_restoration_unload\": False,\n",
+        "    \"show_warnings\": False,\n",
+        "    \"memmon_poll_rate\": 8,\n",
+        "    \"samples_log_stdout\": False,\n",
+        "    \"multiple_tqdm\": True,\n",
+        "    \"print_hypernet_extra\": False,\n",
+        "    \"unload_models_when_training\": False,\n",
+        "    \"pin_memory\": False,\n",
+        "    \"save_optimizer_state\": False,\n",
+        "    \"save_training_settings_to_txt\": True,\n",
+        "    \"dataset_filename_word_regex\": \"\",\n",
+        "    \"dataset_filename_join_string\": \" \",\n",
+        "    \"training_image_repeats_per_epoch\": 1,\n",
+        "    \"training_write_csv_every\": 500,\n",
+        "    \"training_xattention_optimizations\": False,\n",
+        "    \"training_enable_tensorboard\": False,\n",
+        "    \"training_tensorboard_save_images\": False,\n",
+        "    \"training_tensorboard_flush_every\": 120,\n",
+        "    \"sd_model_checkpoint\": \"chilloutmix_NiPrunedFp16.safetensors [1db9eb3bc3]\",\n",
+        "    \"sd_checkpoint_cache\": 0,\n",
+        "    \"sd_vae_checkpoint_cache\": 0,\n",
+        "    \"sd_vae\": \"Automatic\",\n",
+        "    \"sd_vae_as_default\": True,\n",
+        "    \"inpainting_mask_weight\": 1.0,\n",
+        "    \"initial_noise_multiplier\": 1.0,\n",
+        "    \"img2img_color_correction\": False,\n",
+        "    \"img2img_fix_steps\": False,\n",
+        "    \"img2img_background_color\": \"#ffffff\",\n",
+        "    \"enable_quantization\": False,\n",
+        "    \"enable_emphasis\": True,\n",
+        "    \"enable_batch_seeds\": True,\n",
+        "    \"comma_padding_backtrack\": 20,\n",
+        "    \"CLIP_stop_at_last_layers\": 1,\n",
+        "    \"upcast_attn\": False,\n",
+        "    \"use_old_emphasis_implementation\": False,\n",
+        "    \"use_old_karras_scheduler_sigmas\": False,\n",
+        "    \"no_dpmpp_sde_batch_determinism\": False,\n",
+        "    \"use_old_hires_fix_width_height\": False,\n",
+        "    \"interrogate_keep_models_in_memory\": False,\n",
+        "    \"interrogate_return_ranks\": False,\n",
+        "    \"interrogate_clip_num_beams\": 1,\n",
+        "    \"interrogate_clip_min_length\": 24,\n",
+        "    \"interrogate_clip_max_length\": 48,\n",
+        "    \"interrogate_clip_dict_limit\": 1500,\n",
+        "    \"interrogate_clip_skip_categories\": [],\n",
+        "    \"interrogate_deepbooru_score_threshold\": 0.5,\n",
+        "    \"deepbooru_sort_alpha\": True,\n",
+        "    \"deepbooru_use_spaces\": False,\n",
+        "    \"deepbooru_escape\": True,\n",
+        "    \"deepbooru_filter_tags\": \"\",\n",
+        "    \"extra_networks_default_view\": \"cards\",\n",
+        "    \"extra_networks_default_multiplier\": 1.0,\n",
+        "    \"sd_hypernetwork\": \"None\",\n",
+        "    \"return_grid\": True,\n",
+        "    \"do_not_show_images\": False,\n",
+        "    \"add_model_hash_to_info\": True,\n",
+        "    \"add_model_name_to_info\": True,\n",
+        "    \"disable_weights_auto_swap\": True,\n",
+        "    \"send_seed\": True,\n",
+        "    \"send_size\": True,\n",
+        "    \"font\": \"\",\n",
+        "    \"js_modal_lightbox\": True,\n",
+        "    \"js_modal_lightbox_initially_zoomed\": True,\n",
+        "    \"show_progress_in_title\": True,\n",
+        "    \"samplers_in_dropdown\": True,\n",
+        "    \"dimensions_and_batch_together\": True,\n",
+        "    \"keyedit_precision_attention\": 0.1,\n",
+        "    \"keyedit_precision_extra\": 0.05,\n",
+        "    \"quicksettings\": \"sd_model_checkpoint\",\n",
+        "    \"ui_reorder\": \"inpaint, sampler, checkboxes, hires_fix, dimensions, cfg, seed, batch, override_settings, scripts\",\n",
+        "    \"ui_extra_networks_tab_reorder\": \"\",\n",
+        "    \"localization\": \"None\",\n",
+        "    \"show_progressbar\": True,\n",
+        "    \"live_previews_enable\": True,\n",
+        "    \"show_progress_grid\": True,\n",
+        "    \"show_progress_every_n_steps\": 10,\n",
+        "    \"show_progress_type\": \"Approx NN\",\n",
+        "    \"live_preview_content\": \"Prompt\",\n",
+        "    \"live_preview_refresh_period\": 1000,\n",
+        "    \"hide_samplers\": [],\n",
+        "    \"eta_ddim\": 0.0,\n",
+        "    \"eta_ancestral\": 1.0,\n",
+        "    \"ddim_discretize\": \"uniform\",\n",
+        "    \"s_churn\": 0.0,\n",
+        "    \"s_tmin\": 0.0,\n",
+        "    \"s_noise\": 1.0,\n",
+        "    \"eta_noise_seed_delta\": 0,\n",
+        "    \"always_discard_next_to_last_sigma\": False,\n",
+        "    \"postprocessing_enable_in_main_ui\": [],\n",
+        "    \"postprocessing_operation_order\": [],\n",
+        "    \"upscaling_max_images_in_cache\": 5,\n",
+        "    \"disabled_extensions\": [],\n",
+        "    \"sd_checkpoint_hash\": \"1db9eb3bc30c9ab238a602b321953275db081e3bd4702d12b53bccefceca5537\",\n",
+        "    \"ldsr_steps\": 100,\n",
+        "    \"ldsr_cached\": False,\n",
+        "    \"SWIN_tile\": 192,\n",
+        "    \"SWIN_tile_overlap\": 8,\n",
+        "    \"sd_lora\": \"None\",\n",
+        "    \"lora_apply_to_outputs\": False,\n",
+        "    \"control_net_model_config\": \"/output/stable-diffusion-webui/extensions/sd-webui-controlnet/models/cldm_v15.yaml\",\n",
+        "    \"control_net_model_adapter_config\": \"/output/stable-diffusion-webui/extensions/sd-webui-controlnet/models/sketch_adapter_v14.yaml\",\n",
+        "    \"control_net_detectedmap_dir\": \"/output/stable-diffusion-webui/extensions/sd-webui-controlnet/detected_maps\",\n",
+        "    \"control_net_models_path\": \"\",\n",
+        "    \"control_net_max_models_num\": 1,\n",
+        "    \"control_net_model_cache_size\": 2,\n",
+        "    \"control_net_control_transfer\": False,\n",
+        "    \"control_net_no_detectmap\": False,\n",
+        "    \"control_net_detectmap_autosaving\": False,\n",
+        "    \"control_net_only_midctrl_hires\": True,\n",
+        "    \"control_net_allow_script_control\": False,\n",
+        "    \"control_net_skip_img2img_processing\": False,\n",
+        "    \"control_net_monocular_depth_optim\": False,\n",
+        "    \"control_net_only_mid_control\": False,\n",
+        "    \"control_net_cfg_based_guidance\": False,\n",
+        "    \"image_browser_with_subdirs\": True,\n",
+        "    \"image_browser_preload\": False,\n",
+        "    \"image_browser_copy_image\": False,\n",
+        "    \"image_browser_delete_message\": True,\n",
+        "    \"image_browser_txt_files\": True,\n",
+        "    \"image_browser_logger_warning\": False,\n",
+        "    \"image_browser_logger_debug\": False,\n",
+        "    \"image_browser_delete_recycle\": False,\n",
+        "    \"image_browser_scan_exif\": True,\n",
+        "    \"image_browser_mod_shift\": False,\n",
+        "    \"image_browser_mod_ctrl_shift\": False,\n",
+        "    \"image_browser_page_columns\": 6.0,\n",
+        "    \"image_browser_page_rows\": 6.0,\n",
+        "    \"image_browser_pages_perload\": 20.0\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7aea527f-99b9-42b5-b4dd-6417cea8a743",
+      "metadata": {},
+      "source": [
+        "## \u751f\u6210Config.json\u7684\u6267\u884c\u64cd\u4f5c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8c6401d2-72c4-4086-a585-5380d5813cd6",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "import os\n",
+        "from func.env import getWebUIDir\n",
+        "\n",
+        "global webUIDir\n",
+        "try:\n",
+        "    webUIDir\n",
+        "except:\n",
+        "    webUIDir = getWebUIDir()\n",
+        "\n",
+        "# \u5b9a\u4e49\u6587\u4ef6\u8def\u5f84\n",
+        "file_path = os.path.join(webUIDir, \"config.json\")\n",
+        "\n",
+        "# \u5c06JSON\u5bf9\u8c61\u5199\u5165\u6587\u4ef6\n",
+        "with open(file_path, \"w\") as f:\n",
+        "    json.dump(config, f)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "0dc2cdf6-b66b-4c0f-8ebe-4300247d009e",
       "metadata": {},
       "source": [
@@ -1327,6 +1590,7 @@
         "def modify(config):\n",
         "    config['quicksettings'] = \"sd_model_checkpoint, sd_vae, inpainting_mask_weight, CLIP_stop_at_last_layers\"\n",
         "    config['extra_networks_default_view'] = \"thumbs\"\n",
+        "    config['upscaler_for_img2img'] = \"R-ESRGAN 4x+\"\n",
         "    config['extra_networks_default_multiplier'] = 0.6\n",
         "    return config\n",
         "\n",
