easy to initGit

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -119,7 +119,13 @@
         "from func.env import detect_environment\n",
         "env_cb = detect_environment()\n",
         "env_name = env_cb['env_name']\n",
-        "content_path = env_cb['content_path']"
+        "content_path = env_cb['content_path']\n",
+        "\n",
+        "%cd $repo_root_dir\n",
+        "# \u88c5\u8f7dnbfunc\u4e2d\u7684hub\u6d89\u53ca\u7684\u6240\u6709ipynb\u51fd\u6570\n",
+        "%run ./nbfunc/hub.ipynb\n",
+        "\n",
+        "initGit()"
       ]
     },
     {
@@ -259,7 +265,7 @@
         "\n",
         "custom_env_name = 'py' + python_version\n",
         "\n",
-        "# custom_env_name = 'base'\n",
+        "custom_env_name = 'base'\n",
         "\n",
         "s = getoutput('conda info --env')\n",
         "print(s)\n",
@@ -510,7 +516,7 @@
         "\n",
         "def check_xformers_info(validate_rules):\n",
         "    info = get_xformers_info()\n",
-        "    print(info)\n",
+        "    print((\" \").join(info))\n",
         "    for key, value in validate_rules.items():\n",
         "        if info.get(key) != value:\n",
         "            if isinstance(value, bool):\n",
@@ -710,6 +716,31 @@
         "\n",
         "\n",
         "# clear_output(wait=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "fc0ff9b4-7db9-4a12-a9ac-33f1c2b284ea",
+      "metadata": {},
+      "source": [
+        "## \u83b7\u53d6webUIDir"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a799a8af-8b62-4750-a82d-fa92f2e73113",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "global webUIDir\n",
+        "try:\n",
+        "    webUIDir\n",
+        "    if len(webUIDir)==0:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "except:\n",
+        "    webUIDir = getWebUIDir()\n",
+        "print(webUIDir)"
       ]
     },
     {
@@ -935,8 +966,11 @@
         "    global webUIDir\n",
         "    try:\n",
         "        webUIDir\n",
+        "        if len(webUIDir)==0:\n",
+        "            webUIDir = getWebUIDir()\n",
         "    except:\n",
         "        webUIDir = getWebUIDir()\n",
+        "    print(webUIDir)\n",
         "        \n",
         "    if os.path.isabs(models_dir):  # \u5224\u65admodels_dir\u662f\u5426\u4e3a\u7edd\u5bf9\u8def\u5f84\n",
         "        abs_models_dir = models_dir\n",
@@ -1200,8 +1234,11 @@
         "global webUIDir\n",
         "try:\n",
         "    webUIDir\n",
+        "    if len(webUIDir)==0:\n",
+        "        webUIDir = getWebUIDir()\n",
         "except:\n",
         "    webUIDir = getWebUIDir()\n",
+        "print(webUIDir)\n",
         "    \n",
         "sd_models_dir = os.path.realpath(os.path.join(webUIDir,'./models/Stable-diffusion'))\n",
         "print(sd_models_dir)\n",
@@ -1225,6 +1262,15 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "\n",
+        "global webUIDir\n",
+        "try:\n",
+        "    webUIDir\n",
+        "    if len(webUIDir)==0:\n",
+        "        webUIDir = getWebUIDir()\n",
+        "except:\n",
+        "    webUIDir = getWebUIDir()\n",
+        "print(webUIDir)\n",
         "\n",
         "def search_dir_structure(root_dir, structure):\n",
         "    \"\"\"\n",
@@ -1522,8 +1568,11 @@
         "global webUIDir\n",
         "try:\n",
         "    webUIDir\n",
+        "    if len(webUIDir)==0:\n",
+        "        webUIDir = getWebUIDir()\n",
         "except:\n",
         "    webUIDir = getWebUIDir()\n",
+        "print(webUIDir)\n",
         "\n",
         "# \u5b9a\u4e49\u6587\u4ef6\u8def\u5f84\n",
         "file_path = os.path.join(webUIDir, \"config.json\")\n",
@@ -1531,14 +1580,6 @@
         "# \u5c06JSON\u5bf9\u8c61\u5199\u5165\u6587\u4ef6\n",
         "with open(file_path, \"w\") as f:\n",
         "    json.dump(config, f)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "0dc2cdf6-b66b-4c0f-8ebe-4300247d009e",
-      "metadata": {},
-      "source": [
-        "# \u5bf9SD-WebUI\u7684config.json\u8fdb\u884c\u53c2\u6570\u914d\u7f6e"
       ]
     },
     {
@@ -1558,8 +1599,11 @@
         "    global webUIDir\n",
         "    try:\n",
         "        webUIDir\n",
+        "        if len(webUIDir)==0:\n",
+        "            webUIDir = getWebUIDir()\n",
         "    except:\n",
         "        webUIDir = getWebUIDir()\n",
+        "    print(webUIDir)\n",
         "\n",
         "    config_file_path = os.path.join(webUIDir, \"config.json\")\n",
         "    if os.path.exists(config_file_path):\n",
@@ -1595,6 +1639,14 @@
         "    return config\n",
         "\n",
         "modify_config(modify, backup_folder=\"config_backups\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0dc2cdf6-b66b-4c0f-8ebe-4300247d009e",
+      "metadata": {},
+      "source": [
+        "# \u5bf9SD-WebUI\u7684config.json\u8fdb\u884c\u53c2\u6570\u914d\u7f6e"
       ]
     },
     {
@@ -1643,9 +1695,12 @@
         "global webUIDir\n",
         "try:\n",
         "    webUIDir\n",
+        "    if len(webUIDir)==0:\n",
+        "        webUIDir = getWebUIDir()\n",
         "except:\n",
         "    webUIDir = getWebUIDir()\n",
-        "\n",
+        "print(webUIDir)\n",
+        "    \n",
         "args = base_args[:]\n",
         "\n",
         "args += [\n",
