--- a/nbfunc/hub.ipynb
+++ b/nbfunc/hub.ipynb
@@ -65,11 +65,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%run $repo_root_dir/nbfunc/installer.ipynb\n",
-        "%run $repo_root_dir/nbfunc/mounter.ipynb\n",
-        "%run $repo_root_dir/nbfunc/unzip.ipynb\n",
-        "%run $repo_root_dir/nbfunc/files.ipynb"
+        "nbfunc_dir = os.path.join(repo_root_dir, \"nbfunc\")\n",
+        "for file_name in os.listdir(nbfunc_dir):\n",
+        "    if file_name == \"hub.ipynb\":  # \u8df3\u8fc7\u6587\u4ef6\u540d\u4e3a hub.ipynb \u7684\u6587\u4ef6\n",
+        "        continue\n",
+        "    if file_name.endswith(\".ipynb\"):\n",
+        "        file_path = os.path.join(nbfunc_dir, file_name)\n",
+        "        # print(file_path)\n",
+        "        %run $file_path"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b24f4fee-0db3-46cb-b5be-052caa4d4a7c",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
